New FrostyBoy Sandbox/src/objects/Machine__c.object
<CustomObject>
    <description>This object contain the details of machines and spare parts and serve as the master table for all equipment that have been purchased by  Frosty Boy.</description>
    <fields>
        <fullName>Commissioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Machine_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Machine Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Machines</relationshipLabel>
        <relationshipName>Machines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Purchased__c</fullName>
        <label>Date Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Service_Date__c</fullName>
        <label>Last Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Count__c</fullName>
        <label>Location Count</label>
        <summarizedField>Machine_Inventory__c.Machine_Status_Indicator__c</summarizedField>
        <summaryForeignKey>Machine_Inventory__c.Machine_Number__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Machine_Decals__c</fullName>
        <label>Machine Decals</label>
        <picklist>
            <controllingField>Model_Type__c</controllingField>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosty Boy Wave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosty Boy Bubbles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Yoghurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Made</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Status__c</fullName>
        <formula>Case( Location_Count__c,0, &apos;Ready&apos;, 
1,&apos;Already In Use&apos;,
2,&apos;Sitting in distributor warehouse ready to be placed&apos;,
3, &apos;Waiting to be fixed&apos;,
4, &apos;Contract Completed&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Stock__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Minimum Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Type__c</fullName>
        <label>Model Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smach 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 1500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 2500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 152</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 161</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor C723</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Amount__c</fullName>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preventing_M__c</fullName>
        <defaultValue>150</defaultValue>
        <label>Preventive Maintenance Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare_Parts_Remaining__c</fullName>
        <formula>Total_Quantity__c - Spare_Parts_Used1__c</formula>
        <label>Spare Parts Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare_Parts_Used1__c</fullName>
        <label>Spare Parts Used</label>
        <summarizedField>Purchase__c.Spare_Part_Used__c</summarizedField>
        <summaryForeignKey>Purchase__c.Machine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>Purchase__c.Quantity__c</summarizedField>
        <summaryForeignKey>Purchase__c.Machine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Machine</label>
    <listViews>
        <fullName>Active_Machines</fullName>
        <columns>NAME</columns>
        <columns>Model_Type__c</columns>
        <columns>Machine_Decals__c</columns>
        <columns>Machine_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Machine_Status__c</field>
            <operation>equals</operation>
            <value>Already In Use</value>
        </filters>
        <label>Active Machines</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Model_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Repair_Machines</fullName>
        <columns>NAME</columns>
        <columns>Model_Type__c</columns>
        <columns>Machine_Decals__c</columns>
        <columns>Machine_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Machine_Status__c</field>
            <operation>equals</operation>
            <value>Waiting to be fixed</value>
        </filters>
        <label>Repair Machines</label>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contract_00NO0000000oxSgMAI</fullName>
        <active>true</active>
        <field>Contract.Machine_Serial_Number__c</field>
        <filterItems>
            <field>$Source.Machine_Model_Type__c</field>
            <operation>equals</operation>
            <valueField>Machine__c.Model_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Machine_Decals__c</field>
            <operation>equals</operation>
            <valueField>Machine__c.Machine_Decals__c</valueField>
        </filterItems>
        <filterItems>
            <field>Machine__c.Machine_Status__c</field>
            <operation>notEqual</operation>
            <value>Already In Use</value>
        </filterItems>
        <filterItems>
            <field>Machine__c.Commissioned__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Machine Serial Number</name>
        <sourceObject>Contract</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000h6WMAQ_00NO0000000nvblMAA</fullName>
        <active>true</active>
        <field>Machine_Inventory__c.Machine_Number__c</field>
        <filterItems>
            <field>Machine__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Machine</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Machine Location_Machine Number</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000hXwMAI_00NO0000000o2e7MAA</fullName>
        <active>true</active>
        <field>Spare_Parts_Used__c.Spare_Part__c</field>
        <filterItems>
            <field>Machine__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Spare Part</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Spare Parts Used_Spare Part</name>
    </namedFilters>
    <pluralLabel>Machines</pluralLabel>
    <recordTypes>
        <fullName>Machine</fullName>
        <active>true</active>
        <description>This Record type will create Machine</description>
        <label>Machine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spare_Part</fullName>
        <active>true</active>
        <description>This Record type will create Spare part</description>
        <label>Spare Part</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>